<resources>
    <string name="notification_channel"> trip</string>
    <string name="app_name">Travel reminder</string>
    <string name="sign_up_layout">sign up layout</string>
    <string name="profile_img">profile image</string>
    <string name="already_registered">Already Registered</string>
    <string name="sign_up">sign up</string>
    <string name="new_account_text">New Account</string>
    <string name="name_enter">Name</string>
    <string name="user_name_enter">User name</string>
    <string name="password_enter">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="get_password">Get Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="or_login_with">or login with</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="mynotes">MyNotes</string>
    <string name="add_trip">Add trip</string>
    <string name="add_note">Add note</string>
    <string name="my_trips">My trips</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">user@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="up_coming">Upcoming</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_date">0 / 0 / 0</string>
    <string name="trip_time">00:00</string>
    <string name="history">History</string>
    <string name="history_map">History Map</string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="city_from">From</string>
    <string name="city_to">To</string>
    <string name="trip_status">UpComing</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="trip_details">Trip Details</string>
    <string name="start_trip_text">Start</string>
    <string name="sign_out">Sign Out</string>
    <string name="source_city">Source city</string>
    <string name="add">add</string>
    <string name="destination_city">Destination City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="temp_image">temp_image</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="trip_type">Trip Type</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>