<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:context=".ui.add_trip.AddTripActivity">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/plane" />

            <AutoCompleteTextView
                android:id="@+id/from_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/source_city"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <AutoCompleteTextView
                android:id="@+id/to_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/destination_city"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/trip_name_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/trip_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/arrival_date_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="none"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/arrival_time_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/time"
                android:inputType="none"
                android:minHeight="48dp" />
            <Button
                android:id="@+id/add_trip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#ff0000"
                android:text="@string/add"
                android:textColor="@color/purple_700"
                app:cornerRadius="16dp" />

        </LinearLayout>
</layout>